fix: center align products
Center align products on homepage

--- a/packages/shopping/public/style.css
+++ b/packages/shopping/public/style.css
@@ -21,6 +21,10 @@
   object-fit: cover;
 }
 
+#products {
+  justify-content: center;
+}
+
 #products .card {
   max-width: 290px;
 }
